--- a/app/views/zomeki_book_library/admin/shared/_header.html.erb
+++ b/app/views/zomeki_book_library/admin/shared/_header.html.erb
@@ -3,6 +3,6 @@
 </ul>
 
 <ul class="contentMenu">
-<%= content_tag('li') { link_to "#{ZomekiBookLibrary::Book.model_name.human}一覧", books_path, class: 'fixed' } -%>
-<%= content_tag('li') { link_to "設定", content_settings_path, class: 'fixed' } if @content.editable? -%>
+<%= content_tag('li') { link_to "#{ZomekiBookLibrary::Book.model_name.human}一覧", zomeki_book_library_books_path, class: 'fixed' } -%>
+<%= content_tag('li') { link_to "設定", zomeki_book_library_content_settings_path, class: 'fixed' } if @content.editable? -%>
 </ul>
